--- a/js/introducao-javascript/css/index.css
+++ b/js/introducao-javascript/css/index.css
@@ -136,3 +136,7 @@ button[disabled=disabled], button:disabled {
 .paciente-invalido{
 	background: lightcoral;
 }
+
+.paciente-invalido{
+	background-color: lightcoral;
+}
